--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
 <body>
   <div class="dialog">
     <h1>Looks like you took a wrong turn</h1>
-    <img src="assets/images/404_image.jpeg" />
+    <img src="assets/404_image.jpeg" />
   </div>
 </body>
 </html>
